--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@types/webrtc": "^0.0.29",
     "convert-csv-to-json": "^1.3.0",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.1.1",
     "tslib": "^2.0.0",
+    "webrtc-adapter": "^8.0.0",
+    "werift": "^0.11.13",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
