trying to clean up files here

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,10 @@ npm-debug.log
 scripts/code.angularjs.org-firebase/deploy
 scripts/docs.angularjs.org-firebase/deploy
 scripts/docs.angularjs.org-firebase/functions/content
+
+.browserslistrc
+karma.conf.js
+tsconfig.app.json
+tsconfig.json
+tsconfig.spec.json
+tslint.json
