--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -4,10 +4,11 @@
   "compilerOptions": {
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
-    "target": "es2018",
+    "target": "es2020",
     "types": [
       "jasmine",
-      "node"
+      "node",
+      "Papa",
     ]
   }
 }
