--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tune-junn",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,6 +21,12 @@
     "@angular/router": "~11.2.9",
     "@types/webrtc": "^0.0.29",
     "convert-csv-to-json": "^1.3.0",
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1",
+    "jquery-csv": "^1.0.21",
+    "mongoose": "^5.13.3",
+    "ngx-papaparse": "^5.0.0",
+    "papaparse": "^5.3.1",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.1.1",
     "tslib": "^2.0.0",
@@ -33,7 +39,8 @@
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.11",
+    "@types/node": "^12.20.16",
+    "@types/papaparse": "^5.2.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -47,5 +54,20 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
-  }
+  },
+  "description": "Lightweight web app instrument tuner built with Angular.js",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/junngeronimo/tuneJunn.git"
+  },
+  "keywords": [
+    "tuner"
+  ],
+  "author": "Junn Geronimo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/junngeronimo/tuneJunn/issues"
+  },
+  "homepage": "https://github.com/junngeronimo/tuneJunn#readme"
 }
