--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -37,7 +37,7 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
-  "description": "Lightweight web app instrument tuner built with Angular.js",
+  "description": "Web app instrument tuner built with Angular.js",
   "main": "index.html",
   "repository": {
     "type": "git",
