--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "^13.0.3",
     "@angular/cli": "~13.0.1",
     "@angular/compiler-cli": "~13.0.2",
+    "@types/jest": "^27.0.3",
     "@types/node": "^12.20.16",
     "codelyzer": "^6.0.0",
     "eslint": "~8.2.0",
